core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/inout-in-modules.tessla
module Foo {
  in x: Events[Int]
  out x
}
out Foo.x